Updated website contents

--- a/cloudResumeWebsite/index.html
+++ b/cloudResumeWebsite/index.html
@@ -147,6 +147,12 @@
               <img src="img/aws.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
+              <img src="img/ci-cd.svg" style="width: 100px; height: 75px;" /></li>
+            </li>
+            <li class="list-inline-item">
+              <img src="img/terraform.svg" style="width: 100px; height: 75px;" /></li>
+            </li>
+            <li class="list-inline-item">
               <img src="img/network-laptop.svg" style="width: 100px; height: 75px;" />
             </li>
             <li class="list-inline-item"> 
@@ -187,6 +193,12 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               Amazon Web Services</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              CI/CD</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Terraform</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Web Uygulamaları Güvenliği</li>
