Updated website contents

--- a/cloudResumeWebsite/index.html
+++ b/cloudResumeWebsite/index.html
@@ -73,10 +73,10 @@
           <h1 class="mb-0">Hikmet
             <span class="text-primary">İSKİFOĞLU</span>
           </h1>
-          <div class="subheading mb-5">Cloud Engineer - Security Engineer <br> Yıldız Teknik Üniversitesi · Bilgisayar Mühendisliği  <br>  
+          <div class="subheading mb-5">Cloud and DevOps Engineer <br> Yıldız Teknik Üniversitesi · Bilgisayar Mühendisliği  <br>  
             <a href="mailto:hikmetiskif1@gmail.com">hikmetiskif1@gmail.com</a>
           </div>
-          <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünde 4. sınıfım. Bulut teknolojileri ve siber güvenlik alanlarıyla uğraşıyorum.</p>
+          <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünde 4. sınıfım. Bulut teknolojileri ve DevOps alanlarıyla uğraşıyorum.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/hikmet-iskifo%C4%9Flu-66832a49/" target="_blank">
