Updated website contents

--- a/cloudResumeWebsite/index.html
+++ b/cloudResumeWebsite/index.html
@@ -150,6 +150,12 @@
               <img src="img/ci-cd.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
+              <img src="img/docker.svg" style="width: 100px; height: 75px;" /></li>
+            </li>
+            <li class="list-inline-item">
+              <img src="img/kubernetes.svg" style="width: 100px; height: 75px;" /></li>
+            </li>
+            <li class="list-inline-item">
               <img src="img/terraform.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
@@ -196,6 +202,12 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               CI/CD</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Docker</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Kubernetes</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Terraform</li>
