--- a/cloudResumeWebsite/index.html
+++ b/cloudResumeWebsite/index.html
@@ -76,7 +76,7 @@
           <div class="subheading mb-5">Cloud and DevOps Engineer <br> Yıldız Teknik Üniversitesi · Bilgisayar Mühendisliği  <br>  
             <a href="mailto:hikmetiskif1@gmail.com">hikmetiskif1@gmail.com</a>
           </div>
-          <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünde 4. sınıfım. Bulut teknolojileri ve DevOps alanlarıyla uğraşıyorum.</p>
+          <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünden mezunum. Bulut teknolojileri ve DevOps alanlarıyla uğraşıyorum.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/hikmet-iskifo%C4%9Flu-66832a49/" target="_blank">
@@ -102,6 +102,18 @@
         <div class="my-auto">
           <h2 class="mb-5">Deneyim</h2>
 
+          <div class="my-auto"></div>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">DevOps & Linux Sistem Yönetimi Stajyeri</h3>
+              <div class="subheading mb-3">Özgür Yazılım A.Ş.</div>
+              <p>CI/CD pipeline'larının oluşturulması, cluster kurulumları, konteyner orkestrasyonu gibi görevlerde yer aldım.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Şubat 2025 - Mart 2025</span>
+            </div>
+          </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Bilgi Güvenliği Stajyeri</h3>
@@ -114,7 +126,6 @@
           </div>
 
         </div>
-
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="egitim">
