Updated website contents

--- a/cloudResumeWebsite/index.html
+++ b/cloudResumeWebsite/index.html
@@ -76,7 +76,7 @@
           <div class="subheading mb-5">Cloud and DevOps Engineer <br> Yıldız Teknik Üniversitesi · Bilgisayar Mühendisliği  <br>  
             <a href="mailto:hikmetiskif1@gmail.com">hikmetiskif1@gmail.com</a>
           </div>
-          <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünden mezunum. Bulut teknolojileri ve DevOps alanlarıyla uğraşıyorum.</p>
+          <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünden mezunum. Android uygulama geliştirme, bulut teknolojileri ve DevOps alanlarıyla uğraşıyorum.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/hikmet-iskifo%C4%9Flu-66832a49/" target="_blank">
@@ -155,25 +155,25 @@
           <div class="subheading mb-3"></div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <img src="img/aws.svg" style="width: 100px; height: 75px;" /></li>
+              <img src="img/android.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
-              <img src="img/ci-cd.svg" style="width: 100px; height: 75px;" /></li>
+              <img src="img/kotlinlogo.svg" style="width: 100px; height: 75px;" /></li>
+            </li>
+            <li class="list-inline-item">
+              <img src="img/compose.svg" style="width: 100px; height: 75px;" /></li>
+            </li>
+            <li class="list-inline-item">
+              <img src="img/aws.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
               <img src="img/docker.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
-              <img src="img/kubernetes.svg" style="width: 100px; height: 75px;" /></li>
-            </li>
-            <li class="list-inline-item">
-              <img src="img/terraform.svg" style="width: 100px; height: 75px;" /></li>
-            </li>
-            <li class="list-inline-item">
-              <img src="img/network-laptop.svg" style="width: 100px; height: 75px;" />
+              <img src="img/kubernetes.svg" style="width: 100px; height: 75px;" />
             </li>
             <li class="list-inline-item"> 
-              <img src="img/browser-security.svg" style="width: 100px; height: 75px;" /></li>
+              <img src="img/java.svg" style="width: 100px; height: 75px;" /></li>
             </li>
             <li class="list-inline-item">
               <img src="img/chip-ai.svg" style="width: 100px; height: 75px;" />
@@ -185,7 +185,7 @@
               <img src="img/cpp.svg" style="width: 100px; height: 75px;" /></i>
             </li>
             <li class="list-inline-item">
-              <img src="img/asm.svg" style="width: 100px; height: 75px;" /></i>
+              <img src="img/ci-cd.svg" style="width: 100px; height: 75px;" /></i>
             </li>
             <li class="list-inline-item">
               <img src="img/html.svg" style="width: 100px; height: 75px;" /></i>
@@ -194,7 +194,7 @@
               <img src="img/css.svg" style="width: 100px; height: 75px;" /></i>
             </li>
             <li class="list-inline-item">
-              <img src="img/java.svg" style="width: 100px; height: 75px;" /></i>
+              <img src="img/terraform.svg" style="width: 100px; height: 75px;" /></i>
             </li>
             
 
@@ -206,28 +206,38 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
+              Android Development</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Kotlin</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Jetpack Compose</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Android SDK</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
               Bulut Teknolojileri</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Amazon Web Services</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Docker</li>
+                
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Kubernetes</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              CI/CD</li>
+              Java</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Docker</li>
+              PostgreSQL</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Kubernetes</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Terraform</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Web Uygulamaları Güvenliği</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Ağ Güvenliği</li>
+              MySQL</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Makine Öğrenmesi</li>
@@ -239,16 +249,13 @@
               C/C++</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Assembly</li>
+              CI/CD</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
-              Tersine Mühendislik</li>
-              <li>
                 <i class="fa-li fa fa-check"></i>
                 HTML / CSS</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Java</li>
+              Terraform</li>
           </ul>
         </div>
       </section>
