--- a/cloudResumeWebsite/privacy-policy.html
+++ b/cloudResumeWebsite/privacy-policy.html
@@ -112,7 +112,7 @@
         <p class="muted">Privacy Policy</p>
       </div>
       <div class="actions">
-        <a class="btn" href="/terms-of-service" title="Terms of Service">Terms of Service</a>
+        <a class="btn" href="/terms-of-service.html" title="Terms of Service">Terms of Service</a>
         <a class="btn" href="/" title="Back to site">Back to site</a>
       </div>
     </header>
