--- a/cloudResumeWebsite/terms-of-service.html
+++ b/cloudResumeWebsite/terms-of-service.html
@@ -81,7 +81,7 @@
         <p class="muted">Terms of Service</p>
       </div>
       <div class="actions">
-        <a class="btn" href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>
+        <a class="btn" href="/privacy-policy.html" title="Privacy Policy">Privacy Policy</a>
         <a class="btn" href="/" title="Back to site">Back to site</a>
       </div>
     </header>
