--- a/cloudResumeWebsite/index.html
+++ b/cloudResumeWebsite/index.html
@@ -73,7 +73,7 @@
           <h1 class="mb-0">Hikmet
             <span class="text-primary">İSKİFOĞLU</span>
           </h1>
-          <div class="subheading mb-5">Cloud and DevOps Engineer <br> Yıldız Teknik Üniversitesi · Bilgisayar Mühendisliği  <br>  
+          <div class="subheading mb-5">Android Developer - Cloud and DevOps Engineer <br> Yıldız Teknik Üniversitesi · Bilgisayar Mühendisliği  <br>  
             <a href="mailto:hikmetiskif1@gmail.com">hikmetiskif1@gmail.com</a>
           </div>
           <p class="mb-5">Yıldız Teknik Üniversitesi Bilgisayar Mühendisliği bölümünden mezunum. Android uygulama geliştirme, bulut teknolojileri ve DevOps alanlarıyla uğraşıyorum.</p>
